--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "wordpress-boilerplate",
+    "name": "inara_financial",
     "version": "1.0.0",
     "author": "Sproing Creative",
     "license": "MIT",
